tests/errors/InputError/ie-scope-01.ledger
{

2016-12-14  missing enclosing scope
	Expenses	2
	Assets
